Fix bugs and make sidebar hidden by default

--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -4,6 +4,7 @@
 .tasks-view {
   flex: 1;
   padding: 2rem;
+  min-width: 320px;
   overflow-y: scroll;
 
   &__header {
